# Calendar-Planner

./: README.md
calendar-planner/: .gitignore  Cargo.toml  events.json
calendar-planner/src/: app.rs  main.rs  storage.rs
calendar-planner/src/model/: event.rs  mod.rs
calendar-planner/src/ui/: mod.rs
calendar-planner/src/utils/: color.rs
